syntax = "proto3";

import "google/protobuf/any.proto";
import "github.com/antha-lang/antha/api/v1/inventory.proto";

package org.antha_lang.antha.v1;

message Workflow {
  string id = 1;
  string label = 2;
  string description = 3;
  map<string,Element> processes = 4;
  repeated Connection connections = 5;
}

message Element {
  string id = 1;
}

message Connection {
  ProcessAddress source = 1;
  ProcessAddress target = 2;
}

message ProcessAddress {
  string process = 1;
  string port = 2;
}

message WorkflowParameters {
  // Process to element parameters
  map<string,ElementParameters> element_parameters = 1;
  MixerOpt config = 2;
}

message ElementParameters {
  // Address to value
  map<string,google.protobuf.Any> parameters = 1;
}

message MixerOpt {
  repeated InventoryItem input_plates = 1;
  repeated InventoryItem output_plates = 2;
  repeated string input_plate_types = 3;
  repeated string output_plate_types = 4;
  repeated string tip_types = 5;
  int32 max_plates = 6;
  int32 max_wells = 7;
  double residual_volume_weight = 8;
  int32 planning_version = 9;
  bool model_evaporation = 10;

  // Driver specific options. Semantics are not stable. Will need to be
  // revised when multi device execution is supported.
  repeated string driver_specific_input_preferences = 11;
  repeated string driver_specific_output_preferences = 12;
  repeated string driver_specific_tip_preferences = 13;
  repeated string driver_specific_tip_waste_preferences = 14;
  repeated string driver_specific_wash_preferences = 15;
}
